# arda-radar

./: .gitignore  README.md  main.py  pyproject.toml
arda/: __init__.py
arda/detection/: __init__.py  fall_detector.py  tracker.py
arda/processing/: __init__.py  clustering.py  filters.py  pointcloud.py
arda/radar/: __init__.py  parser.py  sensor.py
arda/utils/: __init__.py  config.py  coord_sender.py  logger.py  site.py  thermal_receiver.py  thermal_trigger.py
arda/visualization/: __init__.py  plotter.py
config/: settings.yaml
config/profiles/: xwr68xx_AOP_profile_2026_06_28T01_40_17_736.cfg  xwr68xx_AOP_profile_rdmap.cfg  xwr68xx_AOP_profile_short_range.cfg
data/: README.md
scripts/: analyze_drops.py  check_ports.py  detect.py  monitor.py  rdmap.py  record.py  record_and_view.py  replay.py  trajectory.py
tests/: test_coord_sender.py  test_detection.py  test_parser.py  test_processing.py  test_site.py  test_thermal_receiver.py  test_thermal_trigger.py
