[project]
name = "arda"
version = "0.1.0"
description = "Automated Radar-based Detection & Alert — IWR6843AOPEVM 낙하 감지"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.scripts]
arda = "main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
